--- a/scss/estilos-base.scss
+++ b/scss/estilos-base.scss
@@ -10,6 +10,6 @@
 @import "../scss/tiendaOficial.scss";
 @import "../scss/ultimasNoticias.scss";
 @import "../scss/home-testimonios.scss";
-@import "../scss/_footer.scss";
+@import "../scss/footer.scss";
 
 
