--- a/scss/_equipo-proximos-partidos.scss
+++ b/scss/_equipo-proximos-partidos.scss
@@ -1,9 +1,11 @@
+
 .equipo-contenido-complementario__proximos-partidos{
     margin-bottom: 100px;
+    margin-top: 100px;
 
-    .titulo-Sección-h2{
+    .titulo-Seccion-h2{
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 100px;
         
     }
 
@@ -14,6 +16,8 @@
         grid-template-rows: 1fr;
         gap: 20px;
         margin-bottom: 80px;
+        padding: 0 10%;
+        margin-top: 100px;
         
         
         
@@ -28,8 +32,10 @@
 
 
             .card-partidos__contenedor__equipos{
-                display: flex;
+                display: grid;
+                grid-template-columns: 40% 20% 40%;
                 padding-bottom: 10px;
+                justify-content: center;
                 
                 .equipo-col-izq{
                     display: grid;
@@ -38,7 +44,7 @@
                     justify-items: center;
 
                     img{
-                        width: 80%;
+                        height: 84px;
                         margin-bottom: 26px;
                     }
                     h3{
@@ -74,8 +80,8 @@
                     justify-items: center;
 
                     img{
-                        width: 80%;
-                        padding: 0;
+                        height: 84px;
+                    
                         margin-bottom: 26px;
                         
                     }
@@ -103,7 +109,8 @@
                     font-size: 1.6rem;
                     font-weight: 700;
                     font-family: $fuente2;
-                    color: $colorPrincipal;
+                    color: black;
+                    text-transform: uppercase
                 }
 
             }
@@ -114,4 +121,137 @@
         display: flex;
         justify-content: center;
      }
+}
+
+@media screen and (max-width: 500px) {
+    .equipo-contenido-complementario__proximos-partidos{
+        margin-bottom: 100px;
+        margin-top: 100px;
+    
+        .titulo-Seccion-h2{
+            text-align: center;
+            margin-bottom: 10px;
+            
+        }
+    
+        .proximos-partidos__contenedor{
+    
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 320px));
+            grid-template-rows: auto;
+            gap: 20px;
+            margin-bottom: 80px;
+            padding: 0 10%;
+            margin-top: 40px;
+            
+            
+            
+    
+            .card-partidos__contenedor{
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 80% 20%;
+                box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+                border-radius: 10px;
+                padding: 20px;
+    
+    
+                .card-partidos__contenedor__equipos{
+                    display: grid;
+                    grid-template-columns: 40% 20% 40%;
+                    padding-bottom: 10px;
+                    justify-content: center;
+                    
+                    .equipo-col-izq{
+                        display: grid;
+                        grid-template-columns: 100%;
+                        grid-template-columns: 3fr;
+                        justify-items: center;
+    
+                        img{
+                            height: 64px;
+                            margin-bottom: 0;
+                        }
+                        h3{
+                            margin-bottom: 0;
+                            text-align: center;
+                        }
+                        p{
+                            font-size: 1.6rem;
+                            font-weight: 300;
+                            font-family: $fuente1;
+                            text-align: center;
+                            color: black;
+                        }
+    
+                    }
+    
+                    .equipo-col-centro{
+                        
+                        p{
+                            margin-top: 20px;
+                            font-size: 1.6rem;
+                            font-weight: 700;
+                            font-family: $fuente1;
+                            text-align: center;
+                            padding: 0;
+                        }
+                    }
+    
+                    .equipo-col-der{
+                        display: grid;
+                        grid-template-columns: 100%;
+                        grid-template-columns: 3fr;
+                        justify-items: center;
+    
+                        img{
+                            height: 64px;
+                            margin-bottom: 0;
+                        }
+                        h3{
+                            margin-bottom: 0;
+                            text-align: center;
+                        }
+                        p{
+                            font-size: 1.6rem;
+                            font-weight: 300;
+                            font-family: $fuente1;
+                            text-align: center;
+                            color: black;
+                        }
+    
+                    }
+                }
+    
+                .card-partidos__contenedor__barraInferior{
+                    display: grid;
+                    grid-template-columns: 40% 30% 30%;
+                    grid-template-rows: auto;
+                    
+                    justify-content: space-between;
+                    border-top: solid #E3E3E3 1px;
+                    padding: 20px 10px 10px 0;
+                    
+    
+                    a{
+                        text-decoration: none;
+                        font-size: 1.2rem;
+                        font-weight: 700;
+                        font-family: $fuente2;
+                        color: black;
+                        text-transform: uppercase;
+                        text-align: center;
+    
+                    }
+    
+                }
+            }  
+    
+        }
+        .proximos-partidos-boton{
+            display: flex;
+            justify-content: center;
+         }
+    }
+    
 }
