--- a/scss/_equipos-aside.scss
+++ b/scss/_equipos-aside.scss
@@ -1,69 +1,194 @@
 .equipo-contenedor{
+    
+    .equipo-contenedor-top{
 
     display: grid;
     grid-template-columns: 25% 75%;
     grid-template-rows: auto;
-    padding: 0 5%;
+    padding: 0 10%;
 
 
-    .equipo__aside{
-        background-color: bisque;
-        padding-bottom: 20px;
-        border-radius: 10px;
-    
-        .equipo__aside__boton-conferencia{
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        .equipo__aside{
+            background-color: white;
+            padding-bottom: 20px;
             border-radius: 10px;
-            height: 48px;
-            margin: 34px 14px;
-            border: 2px solid black;
-
-            a{ 
-                font-family: $fuente2;
-                font-size: 2.4rem;
-                font-weight: 700;
-                text-decoration: none;
-                color: $colorPrincipal;
-                padding-right: 28px;
-            }
-
-            i{
-                font-size: 2.4rem;
-            }
-        }
-
-
-        .equipo__aside__conferencia-oeste__Contenedor{
-            .equipo__aside__conferencia-oeste__equipos{
-                display: grid;
-                grid-template-columns: 20% 40% 40%;
-                grid-template-rows: 100%;
+            background: #FFFFFF;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+            margin-right: 20px;
+        
+            .equipo__aside__boton-conferencia{
+                display: flex;
+                justify-content: center;
                 align-items: center;
-                padding-left: 18px;
+                border-radius: 10px;
+                height: 48px;
+                margin: 34px 14px;
+                border: 2px solid black;
 
-                .conferencia-oeste-equipos__posicion{
-                    font-family: $fuente1;
-                    font-size: 1.8rem;
+                a{ 
+                    font-family: $fuente2;
+                    font-size: 2.4rem;
                     font-weight: 700;
+                    text-decoration: none;
+                    color: black;
+                    padding-right: 28px;
                 }
-                  
-                    img{
-                        height: 60px;
-                        margin: 18px 0;
+                
+
+                i{
+                    font-size: 2.4rem;
+                }
+            }
+
+            .equipo__aside__boton-conferencia:hover{
+                background-color: $colorSecundario;
+                border: none;
+
+                a{
+                    color: white;
+                }
+                i{
+                    color: white;
+                }
+            }
+
+
+            .equipo__aside__conferencia-oeste__Contenedor{
+                .equipo__aside__conferencia-oeste__equipos{
+                    display: grid;
+                    grid-template-columns: 20% 40% 40%;
+                    grid-template-rows: 100%;
+                    align-items: center;
+                    padding-left: 18px;
+
+                    .conferencia-oeste-equipos__posicion{
+                        font-family: $fuente1;
+                        font-size: 1.8rem;
+                        font-weight: 700;
+                    }
+                    
+                        img{
+                            
+                            width: 60px;
+                            margin: 18px 0;
+
+                        }
+                    
+                    .conferencia-oeste-equipos__nombre{
+                        font-family: $fuente1;
+                        font-size: 1.8rem;
+                        font-weight: 700;
+                        padding-right: 18px;
 
                     }
-                
-                .conferencia-oeste-equipos__nombre{
-                    font-family: $fuente1;
-                    font-size: 1.8rem;
-                    font-weight: 700;
-                    padding-right: 18px;
 
                 }
-
             }
         }
     }
 }
+
+
+@media screen and (max-width: 500px) {
+    .equipo-contenedor{
+    
+        .equipo-contenedor-top{
+    
+        display: grid;
+        grid-template-columns:320px;
+        grid-template-rows: auto;
+        padding: 0 10%;
+    
+    
+            .equipo__aside{
+                background-color: white;
+                padding-bottom: 20px;
+                border-radius: 10px;
+                background: #FFFFFF;
+                box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+                margin-right: 0;
+                width: 320px;
+                margin-bottom: 20px;
+            
+                .equipo__aside__boton-conferencia{
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    border-radius: 10px;
+                    height: 48px;
+                    margin: 34px 14px;
+                    border: 2px solid black;
+    
+                    a{ 
+                        font-family: $fuente2;
+                        font-size: 2.4rem;
+                        font-weight: 700;
+                        text-decoration: none;
+                        color: black;
+                        padding-right: 28px;
+                    }
+                    
+    
+                    i{
+                        font-size: 2.4rem;
+                    }
+                }
+    
+                .equipo__aside__boton-conferencia:hover{
+                    background-color: $colorSecundario;
+                    border: none;
+    
+                    a{
+                        color: white;
+                    }
+                    i{
+                        color: white;
+                    }
+                }
+    
+    
+                .equipo__aside__conferencia-oeste__Contenedor{
+                    display: grid;
+                    grid-template-columns: repeat(3, 100px);
+                    grid-template-rows: repeat(5, 1fr);
+                    
+                    .equipo__aside__conferencia-oeste__equipos{
+                        display: grid;
+                        grid-template-columns: 100%;
+                        grid-template-rows: auto ;
+                        padding-left: 18px;
+                        margin-bottom: 24px;
+                        
+    
+                        .conferencia-oeste-equipos__posicion{
+                            font-family: $fuente1;
+                            font-size: 1.8rem;
+                            font-weight: 700;
+                            text-align: center;
+                        }
+                        
+                            img{
+                                height: 60%;
+                                width: 74px;
+                                margin: 14px 0 14px 0;
+    
+                            }
+                        
+                        .conferencia-oeste-equipos__nombre{
+                            font-family: $fuente1;
+                            font-size: 1.4rem;
+                            font-weight: 700;
+                            padding-right: 18px;
+                            text-align: center;
+    
+                        }
+    
+                    }
+                }
+            }
+        }
+    }
+    
+    
+}
+
