--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,11 +1,9 @@
 footer{
-
-    margin-top: 100px;
-    padding: 34px 5%;
-    height: 280px;
-    background-color: #979797;
+    padding: 34px 10%;
+    height: 320px;
+    background-color: $colorPrincipal;
     display: grid;
-    grid-template-columns: 35% 15% 20% 30%;
+    grid-template-columns: 25% 20% 25% 30%;
     grid-template-rows: 1fr;
     text-transform: uppercase;
 
@@ -14,15 +12,17 @@ footer{
     font-weight: 700;
     font-family: $fuente2;  
     margin-bottom: 20px;
+    color: white;
 }
 
     .footer__col1{
-        width: 80%;
+        width: 70%;
         .footer__logo{
             font-size: 3.4rem;
             font-weight: 700;
             font-family: $fuente1;
             margin-bottom: 30px;
+            color: white;
         }
 
         p{
@@ -30,6 +30,7 @@ footer{
             font-weight: 700;
             font-family: $fuente2;
             margin-bottom: 14px;
+            color: white;
 
         }
 
@@ -74,7 +75,7 @@ footer{
 
              i{
                  font-size: 20px;
-                 color: $colorPrincipal;
+                 color: white;
              }
              
              a{
@@ -86,7 +87,9 @@ footer{
                  text-decoration: none; 
                  padding-left: 24px;  
              }
+            
         }
+        
      }
 
      .footer__col4{
@@ -98,7 +101,8 @@ footer{
 
                 width: 296px;
                 height: 40px;
-
+                background-color: white;
+                padding-left: 10px;
                 font-size: 1.4rem;
                  font-weight: 400;
                  font-family: $fuente2;
@@ -112,8 +116,9 @@ footer{
                 font-weight: 400;
                 font-family: $fuente2;
                 text-transform: uppercase;
-                background-color: $colorPrincipal;
+                background-color: $colorSecundario;
                 color: white;
+                border: none;
             }
         }
 
@@ -136,13 +141,180 @@ footer{
 
                 i{
                     font-size: 24px;
-                    color: black;
+                    color: white;
                 }
             }
         }
 
         
-
-        
      }
+}
+
+@media screen and (max-width: 500px) {
+    
+    footer{
+        padding: 34px 10%;
+        height: 100%;
+        background-color: $colorPrincipal;
+        display: grid;
+        grid-template-columns:  minmax(300px, 1fr);
+        grid-template-rows: auto;
+        text-transform: uppercase;
+    
+    .footer__titulo{
+        font-size: 2rem;
+        font-weight: 700;
+        font-family: $fuente2;  
+        margin: 20px auto;
+        color: white;
+        text-align: center;
+
+    }
+    
+        .footer__col1{
+            width: 100%;
+            .footer__logo{
+                font-size: 3.4rem;
+                font-weight: 700;
+                font-family: $fuente1;
+                margin-bottom: 30px;
+                color: white;
+                margin: 20px auto;
+                text-align: center;
+            }
+    
+            p{
+               font-size: 1.4rem;
+                font-weight: 700;
+                font-family: $fuente2;
+                margin-bottom: 14px;
+                color: white;
+                text-align: center;
+    
+            }
+    
+            .footer__copy{
+                font-size: 1.4rem;
+                font-weight: 700;
+                font-family: $fuente2;  
+                text-transform: uppercase;
+                color: white;
+                text-align: center;
+            }
+        }
+    
+        .footer__col2{
+    
+            ul{
+    
+                padding: 0;
+    
+                li{
+                    list-style: none;
+                    text-align: center;
+    
+                    .footer__links{
+                    font-size: 1.4rem;
+                    font-weight: 700;
+                    font-family: $fuente2;  
+                    text-transform: uppercase;
+                    color: white;
+                    text-decoration: none;
+                    
+                    }
+                }
+            }
+        }
+    
+        .footer__col3{
+            .footer__col3_contenedor{
+    
+                 display: grid;
+                 grid-template-columns: 300px;
+                 grid-template-rows: repeat(2, 40px);
+                 width: 100%;
+                 justify-content: center;
+                 margin-top: 20px; 
+
+    
+                 i{
+                     font-size: 20px;
+                     color: white;
+                     text-align: center;
+                 }
+                 
+                 a{
+                     font-size: 1.4rem;
+                     font-weight: 700;
+                     font-family: $fuente2;  
+                     text-transform: uppercase;
+                     color: white;
+                     text-decoration: none; 
+                     padding-left: 0;  
+                     text-align: center;
+                 }
+                
+            }
+            
+         }
+    
+         .footer__col4{
+            
+            .footer__boton-suscribirte{
+                display: flex;
+    
+                .boton-suscribirte__email{
+    
+                    width: 296px;
+                    height: 40px;
+                    background-color: white;
+                    padding-left: 10px;
+                    font-size: 1.4rem;
+                     font-weight: 400;
+                     font-family: $fuente2;
+                     border: 0;
+                }
+                
+                .boton-suscribirte__boton{
+                    width: 100px;
+                    height: 40px;
+                    font-size: 1.4rem;
+                    font-weight: 400;
+                    font-family: $fuente2;
+                    text-transform: uppercase;
+                    background-color: $colorSecundario;
+                    color: white;
+                    border: none;
+                }
+            }
+    
+            p{
+                font-size: 1.4rem;
+                font-weight: 700;
+                font-family: $fuente2;
+                text-transform: uppercase;
+                color: white;
+                margin: 24px 0 16px;
+                text-align: center;
+            }
+    
+            .footer__texto-Social-Media{
+                display: flex;
+                justify-content: center;
+    
+                a{
+    
+                    padding-right: 10px;
+                    text-decoration: none;
+    
+                    i{
+                        font-size: 24px;
+                        color: white;
+                    }
+                }
+            }
+    
+            
+         }
+    }
 }
