--- a/scss/_home-bt-pass.scss
+++ b/scss/_home-bt-pass.scss
@@ -1,8 +1,8 @@
 .home-bt-Pass{
-    padding: 0 5%;
+    padding: 0 10%;
     margin-top: 100px;
 
-    .titulo-Sección-h2{
+    .titulo-Seccion-h2{
         @include titulo-h2;
         text-align: center;
     }
@@ -15,7 +15,7 @@
         .home-bt-Pass__textos{
             width: 35%;
 
-            .titulo-Sección-h3{
+            .titulo-Seccion-h3{
                 @include titulo-h3;
                 margin-bottom: 40px;
             }
@@ -32,6 +32,10 @@
             width: 65%; 
             display: flex;
             justify-content: center;
+
+            img{
+                width: 100%;
+            }
         }
     }
 }
@@ -39,15 +43,15 @@
 
 .home-fortalezas{
     margin-top: 100px;
-    padding: 0 5%;
+    padding: 0 10%;
 
     h2{
         font-size: 14rem;
         font-family: $fuente1;
         font-weight: 700;
-        color: #F0F0F0;
+        color: black;
         text-align: center;
-        margin-bottom: 40px;
+        margin-bottom: 50px;
     }
 
     .home-fortalezas__contenedor{
@@ -86,6 +90,9 @@
         }
         .col-c{
             grid-area: col-c;
+            img{
+                height: 880px;
+            }
 
         }
 
@@ -102,15 +109,142 @@
                 p{
                     margin-bottom: 40px;
                 }
-    
-
             }
         }
     }
 
-    .prueba{
-        h2{
-            font-size: 24px;
+
+
+    /* responsive movil */
+
+    @media (max-width: 480px) {
+        .home-bt-Pass{
+            padding: 0 10%;
+            margin-top: 20px;
+
+            .titulo-Seccion-h2{
+                font-size: 2rem;
+                text-align: center;
+            }      
+           
+            .home-bt-Pass__contenedor{
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-template-rows: 2fr;
+                margin-top: 50px;
+                align-items: center;
+                justify-content: center;
+        
+                .home-bt-Pass__textos{
+                    width: 100%;
+                    
+        
+                    .titulo-Seccion-h3{
+                        font-size: 1.8rem;
+                        margin-bottom: 20px;
+                        text-align: center;
+                    }
+          
+                    p{
+                        font-size: 1.4rem;
+                        font-family: $fuente2;
+                        font-weight: 400;
+                        color: black;
+                        text-align: center;
+                        padding: 0 15%;
+                    }
+                }
+        
+                .home-bt-Pass__img{
+                    width: 100%; 
+                    margin-top: 40px;
+                    display: flex;
+                    justify-content: center;
+        
+                    img{
+                        width: 100%;
+                    }
+                }
+            }
         }
+        
+        
+        .home-fortalezas{
+            margin-top: 100px;
+            padding: 0 10%;
+        
+            h2{
+                font-size: 3rem;
+                font-family: $fuente1;
+                font-weight: 700;
+                color: black;
+                text-align: center;
+                margin-bottom: 10px;
+                
+            }
+        
+            .home-fortalezas__contenedor{
+                display: flex;
+               
+        
+                .col-l{
+                   
+                    padding-right: 0;
+                    
+                    
+                    .col-l-contenido{
+                       
+
+                       
+        
+                        h3{
+                            font-size: 18px;
+                            margin-bottom: 14px;
+                            text-align: center;
+                        }
+                        h3:nth-child(1){
+                            margin-top: 10px;
+                        }
+                        p{
+                            margin-bottom: 40px;
+                            text-align: center
+                        }
+                        .boton-principal-movil{
+                            @include botonPrincipal-movil;  
+                            margin: 0 30%;      
+
+                        }
+
+                        
+                    }
+                    .col-l-contenido:nth-child(2){
+                        display: none;
+                    }
+        
+                }
+                .col-c{
+                   display: none;
+        
+                }
+        
+                .col-r{
+                    display: none;
+        
+                    .col-r-contenido{
+                        
+        
+                        h3{
+                            margin-bottom: 14px;
+                        }
+                        p{
+                            margin-bottom: 40px;
+                        }
+                    }
+                }
+            }
+        
+          
+            
     }
 
+}
