--- a/scss/_home-estadisticas.scss
+++ b/scss/_home-estadisticas.scss
@@ -1,25 +1,43 @@
 .home-estadisticas{
-    h2{
+    padding: 0 10%;
+
+    .titulo-Seccion-h2{
         text-align: center;
         margin-bottom: 70px;
+        text-transform: uppercase;
     }
 
     .home-estadisticas__contenedor{
         display: flex;
-        padding: 0 5%;
         justify-content: space-between;
         align-items: center;
+
+        .home-estadisticas__img{
+            background-color: $colorSecundario;
+            background-position: cover;
+            width: 450px;
+            background-size: 70%;
+            display: flex;
+            justify-content: center;
+            overflow: hidden;
+
+            img{
+              width:600px;  
+            }
+        }
+        
     
         .home-estadisticas__textos{
             .home-estadisticas__textos__Jugador{
                 display: flex;
 
                 .textos__numeroJugador{
-                    font-size: 50px;
+                    font-size: 5rem;
                     font-family: $fuente1;
                     font-weight: 700;
-                    background-color: #D9D9D9;
+                    background-color: $colorSecundario;
                     padding: 10px;
+                    color: white;
                 }
 
                 .textos__nombreJugador{
@@ -52,6 +70,11 @@
             }   
         }
 
+        .boton-EATA{
+            width: 280px;
+            margin-top: 50px;
+        }
+
         .home-estadisticas__otros-Jugadores{
             .otros-Jugadores_contenedor{
                 display: flex;
@@ -61,10 +84,21 @@
                 border-radius: 10px;
                 width: 300px;
                 margin-bottom: 16px;
-            
-                img{
-                    padding-right: 24px;
+                
+                .contenedor-img-Otros_Jugadores{
+                    background-color: $colorSecundario;
+                    width: 100px;
+                    overflow: hidden;
+                    display: flex;
+                    justify-content: center;
+                    margin-right: 24px;
+
+                    img{
+                        width: 130px;
+                
+                    }
                 }
+               
             }
 
             .otros-Jugadores_contenedor__nombreJugador{
@@ -80,6 +114,103 @@
                     font-weight: 300;
                     font-family: $fuente1;
                 }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 400px){
+    .home-estadisticas{
+        padding: 0;
+        display: grid;
+        grid-template-columns: repeat minmax(auto-fit, 400px);
+        grid-template-rows: auto;
+        justify-content: center;
+        margin-top: 70px;
+    
+        .titulo-Seccion-h2{
+            text-align: center;
+            margin-bottom: 40px;
+            text-transform: uppercase;
+        }
+    
+        .home-estadisticas__contenedor{
+            display: grid;
+            
+            
+    
+            .home-estadisticas__img{
+                background-color: $colorSecundario;
+                background-position: cover;
+                width: 150px;
+                background-size: 70%;
+                display: flex;
+                justify-content: center;
+                overflow: hidden;
+                margin: auto;
+
+    
+                img{
+                  width:250px;  
+                }
+            }
+            
+        
+            .home-estadisticas__textos{
+                .home-estadisticas__textos__Jugador{
+                    display: flex;
+                    justify-content: center;
+                    margin-top: 20px;
+    
+                    .textos__numeroJugador{
+                        font-size: 2rem;
+                        font-family: $fuente1;
+                        font-weight: 700;
+                        background-color: $colorSecundario;
+                        padding: 10px;
+                        color: white;
+                    }
+    
+                    .textos__nombreJugador{
+                        font-size: 40px;
+                        font-family: $fuente1;
+                        font-weight: 700;
+                        margin-left: 18px;
+                        margin-top: 10px;
+                    }
+                }
+            
+                .home-estadisticas__textos__marcador{
+                    display: flex;
+                    justify-content: center;
+                    
+    
+                    .marcador-stats{
+                        margin-top: 20px;
+                        padding: 10px;
+    
+                        .marcador-stats__texto01{
+                            font-family: $fuente1;
+                            font-size: 2.4rem;
+                            font-weight: 300;
+                        }
+                        .marcador-stats__texto02{
+                            font-family: $fuente1;
+                            font-size: 3.4rem;
+                            font-weight: 700;
+                        }
+                    }
+                }   
+            }
+    
+            .boton-EATA{
+                width: 280px;
+
+                margin: 30px auto;
+            }
+    
+            .home-estadisticas__otros-Jugadores{
+            display: none;
             }
         }
     }
