--- a/scss/_home-testimonios.scss
+++ b/scss/_home-testimonios.scss
@@ -2,34 +2,34 @@
 
    .home-testimonios__contenedor{
     display: flex;
-    background-color: #F6F6F6;
+    background-color: $colorSecundario;
     height: 620px;
-    margin-top: 300px;
-    padding-right: 5%;
+    margin-top: 100px;
+    padding-right: 10%;
+   
     
+    .testimonios__img{
+        background-image: url("https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/img%20testimonio.png");
+        height: 720px;
+        width:100%;
+        background-size: cover;
+        margin-top: -100px;
+        
 
-    img{
-        margin-top: -200px;
-        z-index: 2;
-        height: 820px;
     }
 
     .home-testimonios__textos{
-        padding-left: 120px;
+       margin-top: 8%;
+       margin-left: 60px;
 
         h2{
             font-family: $fuente1;
-            font-size: 12rem;
+            font-size: 5rem;
             font-weight: 700;
             color: #F0F0F0;
-            text-align: center;
+            text-align: left;
             
-        }
-
-        .home-testimonios__comillas{
-            font-family: $fuente2;
-            font-size: 8rem;
-            font-weight: 400;      
+            
         }
 
         .home-testimonios__lista-de-testimonios{
@@ -37,7 +37,8 @@
             font-size: 2.8rem;
             font-weight: 400;
             padding-right: 60px;
-            margin: 0;
+            margin-top: 60px;
+            color: #F0F0F0;  
 
         }
 
@@ -46,6 +47,7 @@
             font-size: 2rem;
             font-weight: 400;
             margin-top: 24px;
+            color: #F0F0F0;  
         }
     }
 
@@ -58,11 +60,15 @@
         padding-bottom: 80px;
     
         .home-testimonios__navegacion__puntos{
-            border: solid 2px #8f8f8f;
+            border: solid 2px $colorPrincipal;
             border-radius: 100%;
             width: 16px;
             height: 16px;
             margin-top: 10px;
+        }
+
+        .home-testimonios__navegacion__puntos:nth-child(1){
+            background-color: $colorPrincipal;
         }
 
         :hover{
@@ -70,4 +76,35 @@
         }
     }
    } 
+}
+
+@media (max-width: 1440px){
+    .home-testimonios{
+
+        .home-testimonios__contenedor{
+         display: flex;
+         background-color: $colorSecundario;
+         height: 620px;
+         margin-top: 100px;
+         padding-right: 10%;
+        
+         
+         .testimonios__img{
+             background-image: url("https://afigueradesign.000webhostapp.com/img/recursos%20para%20proyectos%20web/basktrend%20recursos%20web/img%20testimonio.png");
+             height: 700px;
+             width:100%;
+             background-size: cover;
+             margin-top: -80px;
+            
+             
+     
+         }
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .home-testimonios{
+        display: none;
+    }
 }
