--- a/scss/_home-tienes-el-control.scss
+++ b/scss/_home-tienes-el-control.scss
@@ -1,47 +1,195 @@
 .tienesElControl{
-    padding: 0 5%;
+    padding: 0 10%;
     margin-bottom: 100px;
+
     h2{
         text-align: center;
         margin: 100px 0 70px 0;
+        text-transform: uppercase;
         
     }
 
     .tienesElControl__cards-contenedor{
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: 100%;
+        grid-template-columns: repeat(auto-fit, minmax(312px, 400px));
+        grid-template-rows: 312px;
         justify-items: center;
         border-radius: 10px;
-        background-color: #F6F6F6;
-        padding: 20px 20px 40px 20px;
+        background-color: $colorSecundario;
+        padding: 0;
         
 
         .cards-contenedor__cards{            
-            padding: 20px;
+            padding: 0px;
 
-            .cards__img{
+            .cards__contenido{
                 display: grid;
                 grid-template-columns: 100%;
                 grid-template-rows: 246px 70px;
                 justify-items: center;
-            }
 
-            img:nth-child(1){
-                width: 100%;
+                .cards__img{
+                   
+                 
+                    img{
+                        height: 100%;
+                        width: 360px;
+                        border: solid white 8px;
+                        border-radius: 10px;
+                        background-color: white;
+                    
+                    }
+                }
 
-            }
-            img:nth-child(2){
-                margin-top: -30px;
-            }
+              
+                .cards__ico{
+                    height: 80px;
+                    width: 80px;
+                    border: solid white 6px;
+                    border-radius: 100%;
+                    background-color: $colorPrincipal;
+                    margin-top: -30px;
+                    display: flex;
+                    place-content: center center;
+                    place-items: center center;
 
+
+                    img{
+                        width: 50%;
+                        height: 50%;                
+                    }
+
+                }
+               
+            }
             .cards__textos{
                 text-align: center;
                 
                 h3{
                     margin-bottom: 16px;
+                    color: white;
                 }
-            }
+                .parrafos-base{
+                    color: white;
+                }
+            } 
         }
     }
+
+
 }
+
+@media (max-width: 1440px){
+    .tienesElControl{
+        .tienesElControl__cards-contenedor{
+            .cards-contenedor__cards{
+                .cards__contenido{
+                    .cards__img{
+
+                        img{
+            
+                        width: 300px;
+                        border: solid white 8px;
+                        border-radius: 10px;
+                        background-color: white;
+
+                        }
+                    }
+                }
+
+            }
+
+        }
+    }    
+}
+
+@media screen and (max-width: 500px){
+    .tienesElControl{
+        padding: 0 0;
+        margin-bottom: 100px;
+        margin: auto;
+        margin-bottom: 20px;
+
+        h2{
+            text-align: center;
+            margin: 100px 0 40px 0;
+            text-transform: uppercase;
+            
+        }
+       
+
+        .tienesElControl__cards-contenedor{
+            display: grid;
+            grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr)) ;
+            
+            grid-template-rows: 450px;
+            justify-items: center;
+            border-radius: 10px;
+            background-color: $colorSecundario;
+            padding: 30px 20px 30px 20px;
+            
+    
+            .cards-contenedor__cards{            
+                width: 100%;
+    
+                .cards__contenido{
+                    
+                    
+                    display: grid;
+                    grid-template-columns: 100%;
+                    grid-template-rows: 246px 70px;
+                    justify-items: center;
+    
+                    .cards__img{
+                       
+                     
+                        img{
+                            height: 100%;
+                            width: 300px;
+                            border: solid white 8px;
+                            border-radius: 10px;
+                            background-color: white;
+                        
+                        }
+                    }
+    
+                  
+                    .cards__ico{
+                        height: 80px;
+                        width: 80px;
+                        border: solid white 6px;
+                        border-radius: 100%;
+                        background-color: $colorPrincipal;
+                        margin-top: -30px;
+                        display: flex;
+                        place-content: center center;
+                        place-items: center center;
+    
+    
+                        img{
+                            width: 50%;
+                            height: 50%;                
+                        }
+    
+                    }
+                   
+                }
+                .cards__textos{
+                   margin-bottom: 30px;
+                    text-align: center;
+                    
+                    h3{
+                        margin-bottom: 16px;
+                        color: white;
+                    }
+                    .parrafos-base{
+                        color: white;
+                    }
+                } 
+            }
+        }
+    
+    }
+    
+}
+
