--- a/scss/_menu-header.scss
+++ b/scss/_menu-header.scss
@@ -1,17 +1,34 @@
 .header__contenedor{
     display: flex;
-    height: 100px;
-    padding: 0 5%;
+    height: 120px;
+    padding: 0 10%;
     
     justify-content: space-between;
     align-items: center;
 
     .header__logo{
-        font-size:4rem;
+        height: 100px;
         font-family: $fuente1;   
         font-weight: 700; 
         margin: 0; 
     }
+
+  
+    .menu-hamburguesa-abrir{
+        display: none;
+    }
+
+
+    .nav{
+        display: grid;
+        grid-template-columns: 80% 20%;
+        grid-template-rows: 1fr;
+
+        .menu-hamburguesa-cerrar{
+            display: none;
+        }
+
+
 
     .header__menuNavegacion{
         display: flex;
@@ -26,11 +43,14 @@
                 padding-right: 16px;
                 text-decoration: none;
                 color: $colorPrincipal;
+                text-transform: uppercase;
+
                 }
 
                 a:hover{
                     color: $colorSecundario;
                 }
+               
         }
     }
 
@@ -57,7 +77,7 @@
         }
 
         span{
-            border-right: 2px solid black;
+            border-right: 2px solid $colorPrincipal;
             height: 24px;
             margin-right: 15px; 
 
@@ -66,4 +86,98 @@
             }
         }
     }
- }
+
+}    
+}
+
+@media screen and (max-width: 900px) {
+
+    .header__contenedor{
+        display: grid;
+        grid-template-columns: 90% 10%;
+        grid-template-rows: 120px;
+        height: 120px;
+        justify-content: center;
+        justify-items: center;
+        
+        
+
+        .menu-hamburguesa-abrir{
+            display: block;
+            font-size: 4.5rem;
+            background-color: transparent;
+            border: none;
+            color: $colorSecundario;
+            
+        }
+
+        .nav{
+            opacity: 0;
+            visibility: hidden;
+            position: absolute;
+            top: 0;
+            right: 0; 
+            bottom: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: end;
+            background-color: $colorSecundario;
+            padding: 2rem;
+
+
+            .menu-hamburguesa-cerrar{
+                display: block;
+                font-size: 4.5rem;
+                background-color: transparent;
+                border: none;
+                color: $colorPrincipal;
+                margin-bottom: 5rem;
+            }
+
+        .header__menuNavegacion{
+            flex-direction: column;
+            align-items: end;
+
+                li {
+                    a{
+                        color: white;
+
+                        }
+                }
+            }
+
+        .header__menuRegistro{
+            flex-direction: column;
+            align-items: end;
+            margin-top: 2rem;
+
+            li {
+                a{
+                    color: white;
+
+                    }
+            }
+
+            span{
+                border-right: 0;
+                border-top: 2px solid $colorPrincipal;
+                width: 160px;
+                margin-top: 15px; 
+            }
+
+            }
+
+        
+        }
+
+        .nav.visible {
+            opacity: 1;
+            visibility: visible;
+        }
+    }
+}
+
+
+  
+ 
+
