--- a/scss/_pase-de-liga-hero.scss
+++ b/scss/_pase-de-liga-hero.scss
@@ -1,14 +1,17 @@
 .hero-pase-de-liga{
     height: 700px;
     background-color: beige;
-    padding: 0 5%;
+    padding: 0 10%;
     display: flex;
     align-items: center;
     margin-bottom: 150px;
+    background: linear-gradient(3.16deg, #000000 -2.44%, rgba(0, 0, 0, 0) 86.3%), url(https://hibriddomo.files.wordpress.com/2023/03/banner-pase-de-liga.jpg) no-repeat;
+    
 
     .hero-pase-de-liga__textos{
         padding-right: 100px;
         width: 66.66%;
+        color: white;
     }
 
     .hero-pase-de-liga__card-Plan{
@@ -72,4 +75,96 @@
             }
         }
     }
+}
+
+@media screen and (max-width: 500px) {
+    .hero-pase-de-liga{
+        height: 600px;
+        background-color: beige;
+        padding: 0 10%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: 500px;
+        align-items: center;
+        margin-bottom: 350px;
+        background: linear-gradient(3.16deg, #000000 -2.44%, rgba(0, 0, 0, 0) 86.3%), url(https://hibriddomo.files.wordpress.com/2023/03/banner-pase-de-liga.jpg) no-repeat;
+        background-size: cover;
+        background-position-x: -400px;
+    
+        .hero-pase-de-liga__textos{
+            padding-right: 0;
+            width: 100%;
+            color: white;
+            
+            .titulo-Seccion-h1{
+                font-size: 2rem;
+                text-align: center;
+            }
+        }
+    
+        .hero-pase-de-liga__card-Plan{
+            background-color: white;
+            width: 100%;
+            padding: 48px 28px;
+            height: 500px;
+            margin-bottom: 0;
+            margin-top: -120px;
+            box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+    
+            .card-Plan__titulo{
+                font-size: 2rem;
+                font-weight: 700;
+                font-family: $fuente1;
+                text-align: center;
+                margin-bottom: 36px;
+            }
+            .card-Plan__parrafo{
+                font-size: 1.6rem;
+                font-weight: 400;
+                font-family: $fuente2;
+                margin-bottom: 36px;
+                text-align: center;
+                
+    
+            }
+            .card-Plan__precio-contenedor{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                
+    
+                .card-Plan__precio-simbolo{
+                    font-size: 3.4rem;
+                    font-weight: 700;
+                    font-family: $fuente1;
+                    margin-right: 16px;
+                }
+                .card-Plan__precio-cantidad{
+                    font-size: 5.4rem;
+                    font-weight: 700;
+                    font-family: $fuente1;
+                }
+            }
+    
+            .card-Plan__temporada{
+                font-size: 3rem;
+                font-weight: 700;
+                font-family: $fuente1;
+                text-align: center;
+                margin-bottom: 40px;
+    
+            }   
+            
+            .card-Plan__boton{
+                display: flex;
+                justify-content: center;
+                .boton-principal{
+                    @include botonPrincipal;
+                }
+            
+            }
+        }
+    }
+    
 }
