--- a/scss/_pruebaAplicación.scss
+++ b/scss/_pruebaAplicación.scss
@@ -1,23 +1,35 @@
 .pruebaAPP{
     display: flex;
     align-items: center;
-    padding: 0 5%;
+    padding: 0 10%;
     height: 600px;
-    background-color: #F6F6F6;
+    background-color: $colorSecundario;
     margin-top: 100px;
+
 
     .pruebaAPP__col-l{
         padding-right: 5%;
         width: 40%;
-        .titulo-Sección-h3{
+
+        .titulo-Seccion-h3{
             margin-bottom: 2.6rem;
+            color: white;
         }  
+
+        .parrafos-base{
+            color: white;
+        }
     }
 
     .pruebaAPP__col-r{
         width: 60%;
         display: flex;
         justify-content: center;
+        
+
+        img{
+            width: 660px;
+        }
 
     }
 
@@ -33,3 +45,58 @@
         }
     }
 }
+@media screen and (max-width: 440px) {
+    .pruebaAPP{
+        display: grid;
+        grid-template-columns:  repeat(auto-fit, minmax(300px, 1fr)) ;
+        grid-template-rows: auto;
+        height: 470px;
+        padding: 5% 10%; 
+        justify-content: center;
+        
+        
+
+        .pruebaAPP__col-l{
+            padding: 0;
+            width: 100%;
+          
+
+            .titulo-Seccion-h3{
+                text-align: center;
+            }  
+
+            .parrafos-base{
+                text-align: center;
+            }
+
+            .pruebaAPP__col-l__logos-Store{
+                justify-content: space-between;
+
+        
+                img{
+                    margin-top: 26px;
+                    width: 140px;
+                }
+                :nth-child(1){
+                    margin-right: 0;
+                }
+            }  
+              
+        }
+
+        .pruebaAPP__col-r{
+            width: 100%;
+            padding-right: 0;
+            display: flex;
+            justify-content: center;
+            
+    
+            img{
+                width: 320px;
+            }
+    
+        }
+
+    }
+}
+    
